# uganda_npms

./: .dockerignore  .env.kubernetes.example  .gitignore  compose.yaml  index.html
assets/: AIVisionDashboard-BRM9Nblt.js  AIVisionDashboard-BvaD4l9p.js  AIVisionDashboard-CYv3peGm.js  AIVisionDashboard-CqwD-3D6.js  AIVisionDashboard-DE87bCcm.js  AIVisionDashboard-DnCI6sY9.js  AIVisionDashboard-WGEmr7Pd.js  AIVisionDashboard-p1EDNr18.js  CrossSectionAnalytics-8mk0lYGF.js  CrossSectionAnalytics-BPJ43idk.js  CrossSectionAnalytics-Btl5w1Jx.js  CrossSectionAnalytics-C-uHzg0M.js  CrossSectionAnalytics-DKd0z55o.js  CrossSectionAnalytics-DQm1v55F.js  CrossSectionAnalytics-DaMhuQao.js  CrossSectionAnalytics-lr9V2OPg.js  DataCaptureHub-AVN15eiy.js  DataCaptureHub-CyH92aAg.js  DataCaptureHub-D6u0_yF4.js  DataCaptureHub-DTAe0_XM.js  DataCaptureHub-Du5CO_nq.js  DataCaptureHub-Du9F05Ck.js  DataCaptureHub-_mAQZ4-A.js  DigitalTwin-BIcjH9K8.js  DigitalTwin-BcGgwfjX.js  DigitalTwin-CYUFqYNS.js  DigitalTwin-CfrhQZK7.js  DigitalTwin-CnwKbFk7.js  (+94 more)
backend/: .env.example  Dockerfile  README.md  build_backend.ps1  pavement_data_engine.py  pyproject.toml  requirements-runtime.txt  requirements.txt  sync-supabase.ps1  sync_supabase.py
backend/pms_backend/: __init__.py  api.py  cli.py  config.py  database.py  ml.py  schema_catalog.py  schemas.py  service.py  variables.py
backend/server/: index.js  package-lock.json
backend/sql/: pms_backend_queries.sql  pms_backend_schema.sql  pms_functions.sql  pms_variables.sql
backend/tests/: test_database.py  test_fwd_ingestion.py  test_ml.py
(+12 files in other folders)
